Fix: BlankPage changing minify

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Divyanshu Kumar - AI & Data Science Portfolio</title>
+    <title>Divyanshu Kumar</title>
     <meta name="description" content="Portfolio of Divyanshu Kumar - AI Developer, Data Scientist, and Machine Learning Engineer specializing in real-world AI solutions." />
     <meta name="author" content="Divyanshu Kumar" />
 
@@ -26,6 +26,6 @@
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <!-- <script type="module" src="./src/main.tsx"></script> -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
